crates/bonsaidb-macros/tests/ui/view/invalid_attribute.stderr
error: Only `collection = CollectionType`, `key = KeyType`, `name = \"by-name\"`, `value = ValueType` are supported attributes
 --> tests/ui/view/invalid_attribute.rs:4:21
  |
4 | #[view(name = "hi", authority = "hello", "hi")]
  |                     ^^^^^^^^^
